docs: fix control button overflow on small screen

--- a/src/demo/index.css
+++ b/src/demo/index.css
@@ -21,24 +21,16 @@
 }
 
 flow-step:not(:defined),
-flow-modal:not(:defined),
-flow-badge:not(:defined),
-storybook-button:not(:defined) {
+flow-modal:not(:defined) {
   display: none;
 }
 
 flow-step {
   color: #213547;
 
-  --modal-align-items: end;
+  --modal-align-items: start;
   --modal-show-animation: fly-in-from-bottom;
   --modal-hide-animation: fly-out-to-bottom;
-}
-
-@media (min-width: 600px) {
-  flow-step {
-    --modal-align-items: center;
-  }
 }
 
 flow-badge {
@@ -60,6 +52,13 @@ flow-badge {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   z-index: 2147483647;
+}
+
+@media (min-width: 600px) {
+  .control {
+    flex-direction: row;
+  }
 }
