--- a/src/stories/flow-modal.stories.css
+++ b/src/stories/flow-modal.stories.css
@@ -4,6 +4,13 @@
   left: 50%;
   transform: translateX(-50%);
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   z-index: 2147483647;
+}
+
+@media (min-width: 600px) {
+  .control {
+    flex-direction: row;
+  }
 }
